##Text encoding: utf-8

2005-07-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: name is now a child node instead of a property
	to avoid duplication of the whole isotope node on translation.
	* gcu/Makefile.am: add isotope.*
	* gcu/chemistry.h: add GcuIsotope, GcuValue and GcuDimensionalValue structs
	and use GcuValue instead of double in radii.
	* gcu/crystalatom.cc: use GcuValue in radii.
	* gcu/crystalatom.h: ditto.
	* gcu/element.cc: load isotopes database.
	* gcu/element.h: ditto.
	* gcu/formula.cc: add gcu::Formula::CalculateIsotopicPattern (not yet
	implemented).
	* gcu/formula.h:
	* gcu/isotope.cc: new file; implements gcu::Isotope and
	gcu:IsotopicPattern.
	* gcu/isotope.h: ditto.
	* gcu/object.cc (gu::Object::AddType): use vector::resize instead 
	of vector::reserve.
	* gcu/xml-utils.cc: use GcuValue in radii.
	* programs/gchemcalc.cc: load isotopes database.

2005-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/object.cc: fixed a recent critical bug.

2005-07-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires openbabel >= 2.0.0.
	* gcu/gtkchem3dviewer.cc: use openbabel-2.0.0.

2005-06-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.5.1, requires gtk+>2.6.0
	* database/isotopes.xml.in: added stable isotopes for all elements.

2005-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkperiodic.c: (gtk_periodic_init): use glade file from unstable
	directory.
	* glade/gtkperiodic.glade: added elements 113, 115 and 116.

2005-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/Makefile.am: fixed CFLAGS and CXXFLAGS.

2005-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkchem3dviewer.cc: clear molecule before loading. 
	* glade/gchemcalc.glade: minor size update.
	* programs/gchem3d-viewer.c: implement menus.
	* programs/gchemcalc.cc: ditto.

2005-06-26  Jean Bréfort  <jean.brefort@normalesup.org>