@@ -50,6 +50,7 @@ LIBGNOMEUI_REQUIRED_VERSION=2.4.0
 SHARED_MIME_INFO_REQUIRED_VERSION=0.12
 OPENBABEL_REQUIRED_VERSION=2.0.0
 GTK_REQUIRED_VERSION=2.6.0
+GNOME_OFFICE_REQUIRED_VERSION=0.0.3
 
 REQUIREMENTS="libglade-2.0 >= $LIBGLADE_REQUIRED_VERSION \
 gtk+-2.0 >= $GTK_REQUIRED_VERSION \
@@ -57,6 +58,7 @@ gtkglext-1.0 >= $GTKGLEXT_REQUIRED_VERSION \
 libgnomeprint-2.2 >= $GNOME_PRINT_REQUIRED_VERSION \
 gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED_VERSION \
 libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED_VERSION \
+libgoffice-1 >= $GNOME_OFFICE_REQUIRED_VERSION \
 openbabel >= $OPENBABEL_REQUIRED_VERSION"
 
 if test "$update_databases" = "yes"; then
@@ -66,6 +68,7 @@ fi
 AM_CONDITIONAL(WITH_UPDATE_DESKTOP,test "$UPDATE_DESKTOP" = "yes")
 
 PKG_CHECK_MODULES(GCU, $REQUIREMENTS)
+echo ""
 
 AC_SUBST(GCU_CFLAGS)
 AC_SUBST(GCU_LIBS)
