@@ -24,6 +24,8 @@
  * Boston, MA  02111-1307, USA.
  */
 
+#include "config.h"
+#include "element.h"
 #include "crystalatom.h"
 #include "element.h"
 #include "xml-utils.h"
